# resume-tailor

./: .env.example  .gitignore  README.md  debug_repos.py  list_projects.py  pyproject.toml  requirements.txt  run_pipeline.py  test_ingestion.py  test_strategy.py
data/: master_resume.yaml
src/: __init__.py
src/core/: __init__.py  builder.py  ingestion.py  pipeline.py  strategy.py
src/models/: __init__.py  bullet_schema.py  config.py  state.py
src/services/: __init__.py  github_service.py  llm_service.py  master_resume_service.py
templates/: resume.tex.j2
templates/Resume_Template/: custom-commands.tex  resume.tex
templates/Resume_Template/src/: education.tex  experience.tex  heading.tex  projects.tex  projects.tex.j2  skills.tex  skills.tex.j2  volunteer.tex
